# strands_utils

./: CMakeLists.txt  README.md  package.xml
action/: ImageBranding.action
battery_check/: .batterycheck  README.md  README.md.bak  battery.txt  batterycheck.sh
battery_check/recovery/: index.html
check_something/: CMakeLists.txt  package.xml  setup.py
check_something/launch/: door-check.launch
check_something/scripts/: check_door.py
check_something/src/check_something/: checker.py
driveable_floor_calib/: CMakeLists.txt  README.md
driveable_floor_calib/.svn/: all-wcprops  entries
driveable_floor_calib/.svn/text-base/: Params_xpc2.txt.svn-base  package.xml.svn-base  qrc_images.cxx.svn-base
driveable_floor_calib/include/.svn/: all-wcprops  entries
driveable_floor_calib/include/DriveableFloorCalib/: main_window.hpp  qnode.hpp  qnode_pt1.hpp_backup
driveable_floor_calib/resources/.svn/: entries
driveable_floor_calib/src/: main.cpp  main_window.cpp  qnode.cpp  qnode_pt1.cpp_backup
driveable_floor_calib/src/.svn/: all-wcprops  entries
driveable_floor_calib/ui/.svn/: entries
driveable_floor_check_console/: CMakeLists.txt  README.md
driveable_floor_check_console/.svn/: all-wcprops  entries
driveable_floor_check_console/.svn/text-base/: CMakeLists.txt.svn-base  package.xml.svn-base
driveable_floor_check_console/include/.svn/: all-wcprops  entries
driveable_floor_check_console/src/: main.cpp  qnode.cpp
driveable_floor_check_console/src/.svn/: all-wcprops  entries
driveable_floor_check_qt/: CMakeLists.txt  README.md
driveable_floor_check_qt/.svn/: all-wcprops  entries
driveable_floor_check_qt/src/: main.cpp  main_window.cpp  qnode.cpp
fake_camera_effects/: CMakeLists.txt  README.md  package.xml  setup.py
fake_camera_effects/action/: MapServer.action
fake_camera_effects/scripts/: fake_camera.py
ftp_upload/: CMakeLists.txt  package.xml
ftp_upload/action/: FtpUpload.action
ftp_upload/scripts/: ftp_upload.py  ftp_upload_action_server.py  ftp_upload_script.py
image_blurrer/: CMakeLists.txt
image_blurrer/src/: image_blurrer.cpp
intruder_detection/: CMakeLists.txt  README.md  package.xml
intruder_detection/action/: IntruderDetection.action
intruder_detection/scripts/: intruder_detector.py
laser_door_check/: CMakeLists.txt  package.xml
laser_door_check/action/: DoorCheck.action
laser_door_check/script/: door_check.py
launch/: read_and_tweet.launch
nav_goals_generator/: CMakeLists.txt  README.md  package.xml
nav_goals_generator/launch/: nav_goals_generator.launch
nav_goals_generator/scripts/: nav_goals_generator.py
nav_goals_msgs/: CMakeLists.txt  package.xml
nav_goals_msgs/srv/: NavGoals.srv
odometry_mileage/: CMakeLists.txt  README.md  package.xml
odometry_mileage/src/: odometry_mileage.cpp
previous_positions_service/: CMakeLists.txt  package.xml
previous_positions_service/src/: previous_positions.cpp
previous_positions_service/srv/: PreviousPosition.srv
primitive_extraction/: CMakeLists.txt  README.md  package.xml
primitive_extraction/launch/: extraction.launch  plane_extraction.launch
primitive_extraction/msg/: Indices.msg  Primitive.msg  PrimitiveArray.msg
primitive_extraction/src/: extraction.cpp  primitives_to_markers.cpp
primitive_extraction/srv/: ExtractPrimitives.srv
qr_read_and_tweet/: CMakeLists.txt  package.xml
qr_read_and_tweet/include/: dataimage.h
qr_read_and_tweet/launch/: read_and_tweet.launch
qr_read_and_tweet/scripts/: image_branding.py  read_and_tweet.py  test_branding.py
qr_read_and_tweet/src/: data_matrix.cpp  dataimage.h
ransac_primitives/: CMakeLists.txt  README.md  package.xml
ransac_primitives/include/: cylinder_primitive.h  plane_primitive.h  primitive_extractor.h  primitive_extractor.hpp
ransac_primitives/include/ransac_primitives/: base_primitive.h  cylinder_primitive.h  plane_primitive.h  primitive_core.h  primitive_extractor.h  primitive_extractor.hpp  sphere_primitive.h
ransac_primitives/src/: base_primitive.cpp  base_primitive.h  cylinder_primitive.cpp  plane_primitive.cpp  primitive_core.cpp  primitive_extractor.cpp  primitive_extractor.h  primitive_extractor.hpp  primitive_leaf.cpp  primitive_octree.cpp  primitive_octree.h  primitive_octree.hpp  primitive_visualizer.h  primitive_visualizer.hpp  sphere_primitive.cpp  test_extraction.cpp
republish_pointcloud_service/: CMakeLists.txt  package.xml
republish_pointcloud_service/src/: republish_pointcloud.cpp
republish_pointcloud_service/srv/: RepublishPointcloud.srv
robot_state_chain_publisher/: CMakeLists.txt  package.xml
robot_state_chain_publisher/src/: robot_state_publisher.cpp
robotstate_webpublisher/: CMakeLists.txt  package.xml
robotstate_webpublisher/scripts/: publisher.py
scripts/: read_and_tweet.py
src/: data_matrix.cpp  dataimage.cpp
strands_datacentre/: CMakeLists.txt  README.md  package.xml
strands_datacentre/defaults/: charging_params.yaml  twitter_params.yaml
strands_datacentre/launch/: datacentre.launch  datacentre_old.launch  jaipul_datacentre.launch  mongo.launch
strands_datacentre/scripts/: 2D_maps_collector.py  config_manager.py  maps_collector.py  mongodb_server.py
strands_datacentre/src/: config_manager.py  mongodb_server.py
strands_diagnostics/: CMakeLists.txt  package.xml
strands_hostname/: CMakeLists.txt  README.md
strands_hostname/src/: export_ros_hostname
strands_marathon_achievements/: CMakeLists.txt  README.md  default-achievements.yaml  package.xml
strands_marathon_achievements/scripts/: achievement_monitor.py
strands_tweets/: CMakeLists.txt  README.md  package.xml  setup.py
strands_tweets/action/: SendTweet.action
strands_tweets/scripts/: strands_tweets  streamer.py  tweet.py  tweet_test  tweet_test.py
strands_tweets/srv/: Tweet.srv
strands_utils/: CMakeLists.txt  package.xml
strands_utils/scripts/: distance_from_nav_stats.py  distance_from_poses.py
topological_utils/scripts/: insert_map.py  tmap_from_waypoints.py
usbreset/: CMakeLists.txt  README.md  package.xml
usbreset/src/: usbreset.c
(+31 files in other folders)
