<?xml version="1.0"?>
<package>
  <name>nav_goals_generator</name>
  <version>0.0.0</version>
  <description>The nav_goals_generator package</description>

  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>

  <license>BSD</license>

  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_goals_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>nav_goals_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>

</package>
